--- a/src/app/_components/styles/Hero.css
+++ b/src/app/_components/styles/Hero.css
@@ -43,6 +43,10 @@ section {
     width: 300px;
     height: 300px;
   }
+  .img{
+    margin-top: 15px;
+    padding-top: 15px;
+  }
 }
 
 .about .img:hover {
