--- a/src/app/contact/styles/aboutUs.css
+++ b/src/app/contact/styles/aboutUs.css
@@ -42,8 +42,8 @@
 }
 
 .text-lg {
-    font-size: 1.125rem;
-    margin-bottom: 1rem;
+    font-size: 1rem;
+    margin-bottom: 20px;
 }
 
 .subtitle {
